--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Run</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../src/css/main.css">
 </head>
 <body>
-    <h1>test</h1>
+    <header class="header">
+        <div class="container">
+            <div class="header-wrap">
+                <div class="header-left">
+                    <div class="header-logo">
+                        <a href="#">
+                            <img src="img/logo.png" alt="Run">
+                        </a>
+                    </div>
+                    <div class="header-menu">
+                        <div class="header-menu__button">
+                            <img src="img/iconMenu.svg" alt="Tečky">
+                            <span>Menu</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="header-right">
+                    <div class="header-icons">
+                        <img src="img/buy.svg" alt="Koupit">
+                        <img src="img/search.svg" alt="Vyhledat">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="offer"></section>
+    <section class="why"></section>
+    <section class="scooters"></section>
+    <section class="reviews"></section>
+    <footer class="footer"></footer>
 </body>
 </html>
