--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,31 @@
             </div>
         </div>
     </section>
-    <section class="why"></section>
+    <section class="why">
+        <div class="container">
+            <div class="why-wrap">
+                <div class="why-block">
+                    <h2 class="why-header">
+                        Proč my
+                    </h2>
+                    <div class="why-items">
+                        <div class="why-item">
+                            <img src="img/Delivery.svg" alt="Dodání">
+                            <p>Rychlost objednávky — <br><span>koloběžka u Vás v den objednání</span></p>
+                        </div>
+                        <div class="why-item">
+                            <img src="img/Skills.svg" alt="Zkušenosti">
+                            <p>Roky zkušeností — <br><span>na trhu již 12 let</span></p>
+                        </div>
+                        <div class="why-item">
+                            <img src="img/Love.svg" alt="Recenze">
+                            <p>Důvěra zákazníků — <br><span>362 kladných recenzí</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="scooters"></section>
     <section class="reviews"></section>
     <footer class="footer"></footer>
