--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="../src/css/main.css">
 </head>
 <body>
@@ -83,8 +84,125 @@
             </div>
         </div>
     </section>
-    <section class="scooters"></section>
+    <section class="scooters">
+        <div class="container">
+            <div class="scooters-headwrap">
+                <h2 class="scooters-header">V prodeji</h2>
+            <div class="scooters-arrows">
+                <div class="scooters-arrows__prev">
+                    <img src="img/arrow-left-black.svg" alt="šipka-prev">
+                </div>
+                <div class="scooters-arrows__next">
+                    <img src="img/arrow-right-black.svg" alt="šipka-next">
+                </div>
+            </div>
+            </div>
+            
+            <div class="scooters-slider">
+                <div class="scooters-item">
+                    <div class="scooters-left">
+                        <h3 class="scooters-text">MIDWAY Yamato 0810</h3>
+                        <div class="scooters-desc">
+                            Baterie 6800 Ah, <br>
+                            max. rychlost 30 km/h, <br> 
+                            max. zatížení 120 kg
+                        </div>
+                        <div class="scooters-btn">
+                            <div class="scooters-btn__label">
+                                <img src="img/buy.svg" alt="Cena">
+                                <span>Koupit za</span>
+                            </div>
+                            <strong>18 490 kč</strong>
+                        </div>
+                    </div>
+                    <div class="scooters-right">
+                        <div class="scooters-image">
+                            <img src="img/imgMidway.png" alt="Midway">
+                        </div>
+                        <div class="scooters-label">New</div>
+                    </div>
+                </div>
+                <div class="scooters-item">
+                    <div class="scooters-left">
+                        <h3 class="scooters-text">AOVO S3 2021</h3>
+                        <div class="scooters-desc">
+                            Baterie 5380 Ah, <br>
+                            maximální rychlost 24 km/h, <br>
+                            maximální nosnost 132 kg
+                        </div>
+                        <div class="scooters-btn">
+                            <div class="scooters-btn__label">
+                                <img src="img/buy.svg" alt="Cena">
+                                <span>Koupit za</span>
+                            </div>
+                            <strong>17 900 kč</strong>
+                        </div>
+                    </div>
+                    <div class="scooters-right">
+                        <div class="scooters-image">
+                            <img src="img/imgAovo.png" alt="Midway">
+                        </div>
+                        <div class="scooters-label">New
+                        </div>
+                    </div>
+                </div>
+                <div class="scooters-item">
+                    <div class="scooters-left">
+                        <h3 class="scooters-text">MIDWAY Yamato 0810</h3>
+                        <div class="scooters-desc">
+                            Baterie 6800 Ah, <br>
+                            max. rychlost 30 km/h, <br> 
+                            max. zatížení 120 kg
+                        </div>
+                        <div class="scooters-btn">
+                            <div class="scooters-btn__label">
+                                <img src="img/buy.svg" alt="Cena">
+                                <span>Koupit za</span>
+                            </div>
+                            <strong>18 490 kč</strong>
+                        </div>
+                    </div>
+                    <div class="scooters-right">
+                        <div class="scooters-image">
+                            <img src="img/imgMidway.png" alt="Midway">
+                        </div>
+                        <div class="scooters-label">New</div>
+                    </div>
+                </div>
+                <div class="scooters-item">
+                    <div class="scooters-left">
+                        <h3 class="scooters-text">AOVO S3 2021</h3>
+                        <div class="scooters-desc">
+                            Baterie 5380 Ah, <br>
+                            maximální rychlost 24 km/h, <br>
+                            maximální nosnost 132 kg
+                        </div>
+                        <div class="scooters-btn">
+                            <div class="scooters-btn__label">
+                                <img src="img/buy.svg" alt="Cena">
+                                <span>Koupit za</span>
+                            </div>
+                            <strong>17 900 kč</strong>
+                        </div>
+                    </div>
+                    <div class="scooters-right">
+                        <div class="scooters-image">
+                            <img src="img/imgAovo.png" alt="Midway">
+                        </div>
+                        <div class="scooters-label">New
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="reviews"></section>
     <footer class="footer"></footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/main.js"></script>
+
 </body>
 </html>
